--- a/style/default.css
+++ b/style/default.css
@@ -24,9 +24,8 @@ body{
     margin-top: 3%;
     margin-bottom: 8%;
     padding: 2%;
-    border: #999 solid 2px;
     background-color: #333;
-    border-radius: 15%;
+    border: #999 solid 2px;
     color: #FFF;
     font-size: 100px;
 }
@@ -66,7 +65,6 @@ body{
     margin-right: 2%;
     border: #999 solid 2px;
     background-color: #252525;
-    border-radius: 15%;
     color: #FFF;
     font-size: 4em;
 }
@@ -92,7 +90,6 @@ body{
     margin-top: 0%;
     margin-bottom: 6%;
     border: #333 solid 2px;
-    border-radius: 15%;
     background-color: #036b30;
 }
 
@@ -103,7 +100,6 @@ body{
     margin-top: 2%;
     margin-bottom: 2%;
     border: #333 solid 2px;
-    border-radius: 15%;
     background-color: #610e10;
 }
 
@@ -111,3 +107,6 @@ body{
     text-align: center;
 }
 
+.border-rounded{
+    border-radius: 15%;
+}
